# contract-revenue-radar

./: .gitignore  AGENT_API.md  COMPLIANCE_REVIEW.md  GITHUB_PUBLISHING_CHECKLIST.md  HACKATHON_SUBMISSION.md  LICENSE  README.md  SAMPLE_DOCX_NOTE.md  SUBMISSION_CHECKLIST_FINAL.md  SUBMISSION_FORM_ANSWERS.md  UIPATH_AGENTHACK_PLAN.md  agent_hackathon_adaptations.md  demo_report.md  memory_agent_report.md  pyproject.toml  qdrant_demo_report.md  report.docx
.github/ISSUE_TEMPLATE/: b2b-business-package.yml  b2b-package-approval.yml  config.yml  free-sample-audit.yml  paid-review-start.yml  revenue-protection-sprint.yml  service-package-request.yml  sprint-approval.yml  sprint-invoice-request.yml
demo_video/: README.md
docs/: DOCX_EXPORT.md  REVENUE_PROTECTION_SPRINT.md  approval-packet.html  b2b-package-sample.html  buyer-packet.html  index.html  review-room.html  revops-msp.html  services.html  sprint.html  start-order.html
hackathon_submission/: FINAL_SUMMARY_AND_CHECKLIST.md  ORIGINAL_CHECKLIST.md  README.md  SUBMISSION_FORM_ANSWERS.md  VIDEO_LINK.txt  WHY_THIS_WINS.md  saas_msa_fresh_report.md
sales_site/: index.html  styles.css
samples/: acme_services_agreement.md  api_request.json  api_response.json  better_terms_agreement.md  clause_memory.json  mcp_tool_call.json  msp_retainer_agreement.md  saas_msa_example.md
scripts/: create_demo_video.py  demo.sh  issue_sample_audit.py  mcp_contract_radar.py  memory_agent_demo.py  serve_agent_api.py  sprint_inquiry_reply.py
tests/: test_contract_radar.py  test_issue_sample_audit.py  test_sprint_inquiry_reply.py
(+19 files in other folders)
