[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-revenue-radar"
version = "0.1.0"
description = "Vector-search contract audit tool for finding payment and renewal revenue risks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Contract Revenue Radar" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.14.2"]

[project.scripts]
contract-radar = "contract_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

